// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update does not duplicate already existing type="password": test.html 1`] = `
{
  "0. Before": "
                <tui-input-password [(ngModel)]="value">
                    <input
                        tuiTextfieldLegacy
                        type="password"
                        [maskito]="maskitoOptions"
                    />
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield >
                    <input
                        tuiInput [(ngModel)]="value"
                        type="password"
                        [maskito]="maskitoOptions"
                    />
<tui-icon tuiPassword />

                </tui-textfield>
            ",
}
`;

exports[`ng-update handles dynamic [tuiTextfieldLabelOutside] with TODO: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password
                    [tuiTextfieldLabelOutside]="isOutside"
                    [(ngModel)]="value"
                >
                    Enter password
                </tui-input-password>
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tui-input-password migration:
     - [tuiTextfieldLabelOutside]="isOutside" is dynamic and cannot be migrated automatically. Use <label tuiLabel> inside <tui-textfield> for floating label or outside for static label.
-->
<tui-textfield
                    
                    
                >
                    Enter password
                
<input tuiInput type="password" [(ngModel)]="value" />
<tui-icon tuiPassword />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputPasswordModule to TuiPassword: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password></tui-input-password>

                <tui-input-password [formControl]="control">
                    Enter password
                </tui-input-password>

                <tui-input-password
                    formControlName="password"
                    [tuiTextfieldCleaner]="true"
                >
                    Password
                    <input
                        placeholder="••••••••"
                        tuiTextfield
                    />
                </tui-input-password>

                <tui-input-password [(ngModel)]="value">
                    Confirm password
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield>
<input tuiInput type="password" />
<tui-icon tuiPassword />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>
                    Enter password
                </label>

<input tuiInput type="password" [formControl]="control" />
<tui-icon tuiPassword />
</tui-textfield>

                <tui-textfield
                    
                    [tuiTextfieldCleaner]="true"
                >
<label tuiLabel>
                    Password
                    </label>
<input
                        placeholder="••••••••"
                        tuiInput type="password" formControlName="password"
                    />
<tui-icon tuiPassword />

                </tui-textfield>

                <tui-textfield >
<label tuiLabel>
                    Confirm password
                </label>

<input tuiInput type="password" [(ngModel)]="value" />
<tui-icon tuiPassword />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputPasswordModule to TuiPassword: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputPasswordModule} from '@taiga-ui/legacy';

                @NgModule({
                  imports: [
                    // ...
                    TuiInputPasswordModule,
                  ],
                  // ...
                })
                export class MyModule {}

                @Component({
                  standalone: true,
                  imports: [
                    // ...
                    TuiInputPasswordModule,
                  ],
                  templateUrl: './test.html',
                  // ...
                })
                export class MyComponent {}
            ",
  "1. After": "import { TuiPassword } from "@taiga-ui/kit";
import { TuiIcon, TuiInput } from "@taiga-ui/core";

                                @NgModule({
                  imports: [
                    // ...
                    TuiIcon, TuiPassword, TuiInput,
                  ],
                  // ...
                })
                export class MyModule {}

                @Component({
                  standalone: true,
                  imports: [
                    // ...
                    TuiIcon, TuiPassword, TuiInput,
                  ],
                  templateUrl: './test.html',
                  // ...
                })
                export class MyComponent {}
            ",
}
`;

exports[`ng-update migrates tuiHintContent to tui-icon with tuiTooltip: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password
                    tuiHintContent="Only 3 digits are allowed"
                    [style.max-width.rem]="20"
                    [tuiTextfieldLabelOutside]="true"
                    [(ngModel)]="value"
                >
                    Enter password
                    <input
                        tuiTextfieldLegacy
                        type="password"
                        [maskito]="maskitoOptions"
                    />
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield

                    [style.max-width.rem]="20"


                ><input
                        tuiInput [(ngModel)]="value" placeholder="Enter password"
                        type="password"
                        [maskito]="maskitoOptions"
                    />
<tui-icon tuiTooltip="Only 3 digits are allowed" />
<tui-icon tuiPassword />

                </tui-textfield>
            ",
}
`;

exports[`ng-update removes [tuiTextfieldLabelOutside]="false" and keeps label inside: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password
                    [tuiTextfieldLabelOutside]="false"
                    [(ngModel)]="value"
                >
                    Enter password
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<label tuiLabel>
                    Enter password
                </label>

<input tuiInput type="password" [(ngModel)]="value" />
<tui-icon tuiPassword />
</tui-textfield>
            ",
}
`;

exports[`ng-update removes [tuiTextfieldLabelOutside]="true" and converts text to placeholder: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password
                    [tuiTextfieldLabelOutside]="true"
                    [(ngModel)]="value"
                >
                    Enter password
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<input tuiInput type="password" [(ngModel)]="value" placeholder="Enter password" />
<tui-icon tuiPassword />
</tui-textfield>
            ",
}
`;

exports[`ng-update removes [tuiTextfieldLabelOutside]="true" with inner input: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password
                    [tuiTextfieldLabelOutside]="true"
                    [(ngModel)]="value"
                >
                    Enter password
                    <input
                        tuiTextfieldLegacy
                        type="password"
                    />
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                ><input
                        tuiInput [(ngModel)]="value" placeholder="Enter password"
                        type="password"
                    />
<tui-icon tuiPassword />

                </tui-textfield>
            ",
}
`;

exports[`ng-update removes bare tuiTextfieldLabelOutside and converts text to placeholder: test.html 1`] = `
{
  "0. Before": "
                <tui-input-password
                    tuiTextfieldLabelOutside
                    [(ngModel)]="value"
                >
                    Enter password
                </tui-input-password>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<input tuiInput type="password" [(ngModel)]="value" placeholder="Enter password" />
<tui-icon tuiPassword />
</tui-textfield>
            ",
}
`;
